--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -366,7 +366,7 @@
         <hr>
         <p>
           <b>
-           Current Configuration is {{currentConfigurations[0]}} CPU (GiB) and {{currentConfigurations[1]}} GB RAM
+           Current Configuration is {{currentConfigurations[0]}} CPU (GB) and {{currentConfigurations[1]}} GB RAM
           </b>
         </p>
         <p><b>Please choose the appropriate workstation size by selecting the desired CPU and RAM.</b></p>
