--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -45,7 +45,7 @@
                 <a class="btn btn-primary dotBtn" style="cursor: pointer;" (click)="launchWorkstation(stack)" target="_blank"> Launch </a>
               </td>
               <td>
-                <button class="btn btn-primary dotBtn" [disabled]="!getBoolean(stack.allow_resize)" (click)="renderReSizeDialog(stack)" style="cursor: pointer;" target="_blank"> Resize </button>
+                <button class="btn btn-primary dotBtn" [disabled]="!getBoolean(stack.allow_resize)" (click)="renderReSizeDialog(stack)" style="cursor: pointer;" target="_blank"> Manage </button>
               </td>
             </tr>
           </ng-template>
