--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -405,7 +405,7 @@
         <hr>
         <p>
           <b>
-            Your current workstation configuration is {{currentConfigurations[0]}} CPU (GB) and {{currentConfigurations[1]}} GB RAM
+            Your current workstation configuration is {{currentConfigurations[0]}} CPU and {{currentConfigurations[1]}} GB RAM
           </b>
         </p>
         <div><b>Please choose the appropriate instance type by selecting the desired CPU and RAM. For pricing related details <a href="https://aws.amazon.com/ec2/pricing/on-demand/" target="_blank">click here</a>.</b>
