Fixes for SDC-606 make fields in dialog box more prominent

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.css
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.css
@@ -9,6 +9,9 @@
 .mat-dialog-container {
     border: solid 2px #0b264db8 !important;
 }
+mat-label {
+    color: black;
+}
 mat_tab_style{
     height: 451px;
 }
