--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -375,9 +375,14 @@
             <mat-checkbox [(ngModel)]="resizeWorkSpaceOnly"></mat-checkbox>
             <p style="padding-left: 10px;">
               <b>
-                Resize Workstation
+                Resize Workstation 
               </b>
             </p>
+            <span [matTooltipPosition]="'above'" matTooltip="Schedule and resize your default workstation with extra CPU and Memory">
+            <i class="material-icons">
+                info
+                </i>
+                </span>
           </div>
           <div class="resize-filter-start-workspace">
             <mat-checkbox [disabled]="blockVolumeManage" [(ngModel)]="resizeAddDiskOnly"></mat-checkbox>
@@ -386,16 +391,26 @@
                 Add Additional Diskspace
               </b>
             </p>
+            <span [matTooltipPosition]="'above'" matTooltip="Schedule and attach additional filesystem/storage to your workstation">
+                <i class="material-icons">
+                    info
+                    </i>
+                    </span>
           </div>
-          <!-- div class="resize-filter-start-workspace">
+          <div class="resize-filter-start-workspace">
             <mat-checkbox [(ngModel)]="scheduleUpTime"></mat-checkbox>
             <p style="padding-left: 10px;">
               <b>
                 Schedule WorkStation Up Time
               </b>
             </p>
-          </div> -->
-          <button [disabled]="!resizeWorkSpaceOnly && !resizeAddDiskOnly" style="align-self: flex-end; margin-right: 24px;" (click)="handleResizeWorkNext(1)"
+            <span [matTooltipPosition]="'above'" matTooltip="Schedule your workstation to keep it running during SDC daily instance shutdown process">
+                <i class="material-icons">
+                    info
+                    </i>
+                    </span>
+          </div>
+          <button [disabled]="!resizeWorkSpaceOnly && !resizeAddDiskOnly && !scheduleUpTime" style="align-self: flex-end; margin-right: 24px;" (click)="handleResizeWorkNext(1)"
             class="btn btn-primary dotBtn">Next</button>
         </div>
       </mat-dialog-content>
@@ -408,7 +423,11 @@
             Your current workstation configuration is {{currentConfigurations[0]}} CPU and {{currentConfigurations[1]}} GB RAM
           </b>
         </p>
-        <div><b>Please choose the appropriate instance type by selecting the desired CPU and RAM. For pricing related details <a href="https://aws.amazon.com/ec2/pricing/on-demand/" target="_blank">click here</a>.</b>
+        <div><b>Please choose the appropriate instance type by selecting the desired CPU and RAM<span [matTooltipPosition]="'above'" matTooltip="Schedule and resize your default workstation with extra CPU and Memory">
+            <i class="material-icons">
+                info
+                </i>
+                </span> For pricing related details <a href="https://aws.amazon.com/ec2/pricing/on-demand/" target="_blank">click here</a>.</b>
           <p>
           <i>Note: Your workstation will be stopped, if it's currently running in order to resize the workstation. Please save your work before requesting the resize for workstation.</i>
           </p>
@@ -510,10 +529,55 @@
         </div>
       </mat-dialog-content>
     </mat-tab>
+    <mat-tab *ngIf="(scheduleUpTime)" label="Schedule WorkStation Up Time" #tab5 [disabled]='selectedIndex==0 || selectedIndex==1 || (!scheduleUpTime)'>
+        <mat-dialog-content style="height: 100%;">
+          <hr>
+          <p><b>Please select the schedule <span [matTooltipPosition]="'above'" matTooltip="Schedule your workstation to keep it running during SDC daily instance shutdown process">
+              <i class="material-icons">
+                  info
+                  </i>
+                  </span> between what dates you would want the workstation to be in resized state. An email
+              notification will be sent after the resize is completed.</b></p>
+          <hr>
+          <p>
+            <b>
+              Schedule WorkStation Up Time
+            </b>
+          </p>
+  
+          <div class="resize-disk-space-container">
+              <div class="resize-date-form">
+                  <mat-form-field style='width: 42%;'>
+                    <input matInput [matDatepicker]="picker" placeholder="From date" [(ngModel)]="uptimeFromDate"
+                      [min]="systemDate">
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                  </mat-form-field>
+        
+                  <mat-form-field style="width: 42%">
+                    <input matInput [matDatepicker]="picker2" placeholder="To date" [min]="workSpaceFromDate" [(ngModel)]="uptimeToDate">
+                    <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                    <mat-datepicker #picker2></mat-datepicker>
+                  </mat-form-field>
+                  <div style='width: 10%;'></div>
+                </div>
+            <div class="resize-filter-button-group">
+              <button class="btn btn-primary dotBtn" (click)="onNoClick()">Cancel</button>
+              <button style="margin-left: 10px;" [disabled]=' !uptimeFromDate || !uptimeToDate'
+                (click)="handleUptimeButtonClick()" class="btn btn-primary dotBtn">{{getUptimeContinueButton()}}</button>
+            </div>
+          </div>
+        </mat-dialog-content>
+  
+      </mat-tab>
     <mat-tab *ngIf="(resizeAddDiskOnly || ManageBoth)" label="Disk Space" #tab3 [disabled]='selectedIndex==0 || selectedIndex==1 || (!resizeAddDiskOnly && !ManageBoth)'>
       <mat-dialog-content style="height: 100%;">
         <hr>
-        <p><b>Please specify additional disk space that should be added to the workstation</b></p>
+        <p><b>Please specify additional disk space that should be added to the workstation</b>  <span [matTooltipPosition]="'above'" matTooltip="Schedule and attach additional filesystem/storage to your workstation">
+          <i class="material-icons">
+              info
+              </i>
+              </span></p>
         <hr>
         <p>
           <b>
@@ -533,7 +597,7 @@
           <div class="resize-filter-button-group">
             <button class="btn btn-primary dotBtn" (click)="onNoClick()">Cancel</button>
             <button style="margin-left: 10px;" [disabled]='diskSizeChange && !additionalDiskSpace'
-              (click)="handleResizeWorkNext(3)" class="btn btn-primary dotBtn">Next</button>
+              (click)="handleResizeWorkNext(4)" class="btn btn-primary dotBtn">Next</button>
           </div>
         </div>
       </mat-dialog-content>
