Schedule up time Tooltip

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -398,7 +398,7 @@
                     </span>
           </div>
           <div class="resize-filter-start-workspace">
-            <mat-checkbox [(ngModel)]="scheduleUpTime"></mat-checkbox>
+            <mat-checkbox [(ngModel)]="scheduleUpTime" [matTooltipPosition]="'above'" matTooltip={{getScheduleUptimeTooltip()}} [disabled]="disableUptimeOption"></mat-checkbox>
             <p style="padding-left: 10px;">
               <b>
                 Schedule WorkStation Up Time
