--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -401,7 +401,7 @@
             <mat-checkbox [(ngModel)]="scheduleUpTime" [matTooltipPosition]="'above'" matTooltip={{getScheduleUptimeTooltip()}} [disabled]="disableUptimeOption"></mat-checkbox>
             <p style="padding-left: 10px;">
               <b>
-                Schedule WorkStation Up Time
+                Schedule Workstation Up Time
               </b>
             </p>
             <span [matTooltipPosition]="'above'" matTooltip="Schedule your workstation to keep it running during SDC daily instance shutdown process">
@@ -529,7 +529,7 @@
         </div>
       </mat-dialog-content>
     </mat-tab>
-    <mat-tab *ngIf="(scheduleUpTime)" label="Schedule WorkStation Up Time" #tab5 [disabled]='selectedIndex==0 || selectedIndex==1 || (!scheduleUpTime)'>
+    <mat-tab *ngIf="(scheduleUpTime)" label="Schedule Workstation Up Time" #tab5 [disabled]='selectedIndex==0 || selectedIndex==1 || (!scheduleUpTime)'>
         <mat-dialog-content style="height: 100%;">
           <hr>
           <p><b>Please select the schedule <span [matTooltipPosition]="'above'" matTooltip="Schedule your workstation to keep it running during SDC daily instance shutdown process">
@@ -541,7 +541,7 @@
           <hr>
           <p>
             <b>
-              Schedule WorkStation Up Time
+              Schedule Workstation Up Time
             </b>
           </p>
   
