disabled Add Disk and fixed css

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -384,7 +384,7 @@
                 </i>
                 </span>
           </div>
-          <div class="resize-filter-start-workspace">
+          <div style="display: none;" class="resize-filter-start-workspace">
             <mat-checkbox [disabled]="blockVolumeManage" [(ngModel)]="resizeAddDiskOnly"></mat-checkbox>
             <p style="padding-left: 10px;">
               <b>
