Fix export issues, and add warning for resize functionality

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -357,7 +357,7 @@
   </mat-tab-group>
 </div>
 
-<div *ngIf="mailType == 'reSize Request'">
+<div>
   <h3>{{getTabHeading()}}</h3>
   <hr>
   <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndexChange($event)">
@@ -384,6 +384,13 @@
                 </i>
                 </span>
           </div>
+          <div>
+          <p>
+            <b>
+              <i>Workstation must be in shutdown or stopped state for resizing.</i>
+            </b>
+          </p>
+        </div>
           <div style="display: none;" class="resize-filter-start-workspace">
             <mat-checkbox [disabled]="blockVolumeManage" [(ngModel)]="resizeAddDiskOnly"></mat-checkbox>
             <p style="padding-left: 10px;">
