adding left margin to resize warning message.

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -385,7 +385,7 @@
                 </span>
           </div>
           <div>
-          <p>
+          <p style="margin-left: 30px">
             <b>
               <i>Workstation must be in shutdown or stopped state for resizing.</i>
             </b>
