fixed dataset and manage ws dialog issues

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -357,7 +357,8 @@
   </mat-tab-group>
 </div>
 
-<div>
+<!-- ngIf to render the dialog only when data.mailType is resize -->
+<div *ngIf="mailType === 'reSize Request'">
   <h3>{{getTabHeading()}}</h3>
   <hr>
   <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndexChange($event)">
