--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -545,7 +545,7 @@
                   info
                   </i> -->
                   </span> 
-                  “Please select the dates you would want the workstation to be up and opted out of the nightly stop scheduler from stopping your instance automatically. An email notification will be sent after the uptime request is completed.”</b></p>
+                  Please select the dates you would want the workstation to be up and opted out of the nightly stop scheduler from stopping your instance automatically. An email notification will be sent after the uptime request is completed.</b></p>
           <hr>
           <p>
             <b>
