Fix displaying the current uptime schedule on tooltip

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -406,7 +406,7 @@
                     </span>
           </div>
           <div class="resize-filter-start-workspace">
-            <mat-checkbox [(ngModel)]="scheduleUpTime" [matTooltipPosition]="'above'" matTooltip={{getScheduleUptimeTooltip()}} [disabled]="disableUptimeOption"></mat-checkbox>
+            <mat-checkbox [(ngModel)]="scheduleUpTime" [matTooltipPosition]="'above'" matTooltip={{getScheduleUptimeTooltip()}}></mat-checkbox>
             <p style="padding-left: 10px;">
               <b>
                 Schedule Workstation UpTime
